# nn_random

./: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  main.cpp  matrix.hpp  nn.hpp  vector.hpp
